tests/fixtures/diag_span_multiline_expr.sh2
func main() {
    print(try_run(
       foo
    ))
}
